--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint:html": "htmlhint .",
     "lint": "eslint .",
-    "docs": "jsdoc -c jsdoc.json"
+    "docs": "jsdoc -c jsdoc.json",
+    "all_tests": "npm run lint && npm run lint:html && npm run test && npm run docs"
   },
   "type": "module",
   "jest": {
