--- a/.github/workflows/jsdoc-on-pr.yaml
+++ b/.github/workflows/jsdoc-on-pr.yaml
@@ -9,8 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout PR branch
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -22,3 +24,16 @@ jobs:
 
       - name: Generate JSDoc
         run: npm run docs
+
+      - name: Commit and push updated docs
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+          git add docs
+          if git diff --cached --quiet; then
+            echo "No JSDoc changes to commit"
+          else
+            git commit -m "Update JSDoc documentation"
+            git push
+          fi
