--- a/.github/workflows/jsdoc-on-pr.yaml
+++ b/.github/workflows/jsdoc-on-pr.yaml
@@ -26,14 +26,18 @@ jobs:
         run: npm run docs
 
       - name: Commit and push updated docs
+        env:
+          GH_TOKEN: ${{ secrets.PAT }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
           
-          git add docs
+          git add -f docs
           if git diff --cached --quiet; then
             echo "No JSDoc changes to commit"
           else
             git commit -m "Update JSDoc documentation"
-            git push
+            git push origin HEAD:${{ github.head_ref }}
           fi
