--- a/.github/workflows/jsdoc-on-pr.yaml
+++ b/.github/workflows/jsdoc-on-pr.yaml
@@ -39,5 +39,7 @@ jobs:
             echo "No JSDoc changes to commit"
           else
             git commit -m "Update JSDoc documentation"
+            echo "Token User:"
+            curl -s -H "Authorization: token ${GH_TOKEN}" https://api.github.com/user
             git push origin HEAD:${{ github.head_ref }}
           fi
