--- a/.github/workflows/jsdoc-on-pr.yaml
+++ b/.github/workflows/jsdoc-on-pr.yaml
@@ -29,7 +29,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.PAT }}
         run: |
-          git config --global user.name "aFarahbakhsh1383"
+          git config --global user.name  "aFarahbakhsh1383"
           git config --global user.email "aFarahbakhsh1383@users.noreply.github.com"
 
           git add -f docs
@@ -37,6 +37,6 @@ jobs:
             echo "No JSDoc changes to commit"
           else
             git commit -m "Update JSDoc documentation"
-            git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }} HEAD:${{ github.head_ref }}
+            git push https://aFarahbakhsh1383:${GH_TOKEN}@github.com/${{ github.repository }} \
+                    HEAD:${{ github.head_ref }}
           fi
-
