--- a/.github/workflows/jsdoc-on-pr.yaml
+++ b/.github/workflows/jsdoc-on-pr.yaml
@@ -6,6 +6,10 @@ on:
 
 jobs:
   generate-docs:
+    permissions:
+      contents: write
+      pull-requests: write
+    
     runs-on: ubuntu-latest
 
     steps:
