--- a/.github/workflows/jsdoc-on-pr.yaml
+++ b/.github/workflows/jsdoc-on-pr.yaml
@@ -9,7 +9,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-    
+      Actions: Write
     runs-on: ubuntu-latest
 
     steps:
