--- a/.github/workflows/jsdoc-on-pr.yaml
+++ b/.github/workflows/jsdoc-on-pr.yaml
@@ -23,7 +23,7 @@ jobs:
       - run: npm ci
       - run: npm run docs
 
-      - name: Commit & push docs
+      - name: Commit and push docs
         env: { GH_TOKEN: ${{ secrets.PAT }} }   # or drop this block and use GITHUB_TOKEN
         run: |
           git config --global user.name  "aFarahbakhsh1383"
