--- a/.github/workflows/jsdoc-on-pr.yaml
+++ b/.github/workflows/jsdoc-on-pr.yaml
@@ -3,14 +3,13 @@ name: Generate JSDoc
 on:
   push:
     branches: ['**']
-    # Run only when real source files change—not for docs-only commits
 
 jobs:
   generate-docs:
     permissions:
       contents: write
-      pull-requests: write     # optional; used only if you add a PR comment
-      actions: write           # lower-case; lets PAT trigger other workflows
+      pull-requests: write   
+      actions: write        
 
     runs-on: ubuntu-latest
 
@@ -18,13 +17,15 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-node@v4
-        with: { node-version: 20 }
+        with:
+          node-version: 20
 
       - run: npm ci
       - run: npm run docs
 
       - name: Commit and push docs
-        env: { GH_TOKEN: ${{ secrets.PAT }} }   # or drop this block and use GITHUB_TOKEN
+        env:
+          GH_TOKEN: ${{ secrets.PAT }}   
         run: |
           git config --global user.name  "aFarahbakhsh1383"
           git config --global user.email "aFarahbakhsh1383@users.noreply.github.com"
