--- a/.github/workflows/jsdoc-on-pr.yaml
+++ b/.github/workflows/jsdoc-on-pr.yaml
@@ -1,17 +1,38 @@
+name: Generate JSDoc
+
+on:
+  push:
+    branches: ['**']          # run on every branch
+
+jobs:
+  generate-docs:
+    permissions:
+      contents: write         # allow GITHUB_TOKEN to push
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - run: npm ci
+      - run: npm run docs      # output goes to ./docs
+
       - name: Push docs and prune old docs branches
         env:
-          # name of the branch that will hold the docs for this source branch
-          DOCS_BRANCH: docs/${{ github.ref_name }}
+          DOCS_BRANCH: "docs/${{ github.ref_name }}"   # docs/<source-branch>
         run: |
           set -e
 
           git config --global user.name  "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          # ─── create/update the docs branch ─────────────────────────────
+          # ── create / update docs branch ───────────────────────────────
           git switch --orphan "$DOCS_BRANCH"
-          git rm -r --cached . >/dev/null 2>&1 || true    # remove everything from index
-          git add -f docs                                 # keep only docs
+          git rm -r --cached . >/dev/null 2>&1 || true   # clear index
+          git add -f docs                                # keep only docs
 
           if git diff --cached --quiet; then
             echo "Docs unchanged - skipping push"
@@ -20,7 +41,7 @@
             git push --force origin "$DOCS_BRANCH"
           fi
 
-          # ─── prune ALL other docs/* branches ──────────────────────────
+          # ── prune every other docs/* branch ───────────────────────────
           echo "Cleaning up old docs branches…"
           for ref in $(git ls-remote --heads origin "refs/heads/docs/*" | awk '{print $2}'); do
             branch=${ref#refs/heads/}
