--- a/.github/workflows/jsdoc-on-pr.yaml
+++ b/.github/workflows/jsdoc-on-pr.yaml
@@ -2,34 +2,32 @@ name: Generate JSDoc
 
 on:
   push:
-    branches: ['**']          # run on every branch
+    branches: ['**']
 
 jobs:
   generate-docs:
     permissions:
-      contents: write         # allow GITHUB_TOKEN to push
+      contents: write          # lets GITHUB_TOKEN push
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-node@v4
-        with:
-          node-version: 20
+        with: { node-version: 20 }
 
       - run: npm ci
-      - run: npm run docs      # output goes to ./docs
+      - run: npm run docs        # output goes to ./docs
 
-      - name: Push docs and prune old docs branches
+      - name: Force-push docs branch
         env:
-          DOCS_BRANCH: "docs/${{ github.ref_name }}"   # docs/<source-branch>
+          DOCS_BRANCH: docs      # ← always “docs”
         run: |
           set -e
-
           git config --global user.name  "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          # ── create / update docs branch ───────────────────────────────
+          # create / reset the docs branch as an orphan with only the docs folder
           git switch --orphan "$DOCS_BRANCH"
           git rm -r --cached . >/dev/null 2>&1 || true   # clear index
           git add -f docs                                # keep only docs
@@ -37,16 +35,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "Docs unchanged - skipping push"
           else
-            git commit -m "Update JSDoc documentation for $DOCS_BRANCH"
+            git commit -m "Update JSDoc documentation"
             git push --force origin "$DOCS_BRANCH"
           fi
-
-          # ── prune every other docs/* branch ───────────────────────────
-          echo "Cleaning up old docs branches…"
-          for ref in $(git ls-remote --heads origin "refs/heads/docs/*" | awk '{print $2}'); do
-            branch=${ref#refs/heads/}
-            if [[ "$branch" != "$DOCS_BRANCH" ]]; then
-              echo "Deleting $branch"
-              git push origin --delete "$branch"
-            fi
-          done
