--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx serve -s .",
+    "start": "npx serve .",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint:html": "htmlhint .",
     "lint": "eslint .",
