--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   "eslintIgnore": [
     "package.json",
     "package-lock.json"
-  ]
+  ],
+  "dependencies": {
+    "jest-puppeteer": "^11.0.0"
+  }
 }
