--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "globals": "^16.1.0",
     "htmlhint": "^1.1.4",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "jsdoc": "^4.0.4"
   },
   "eslintIgnore": [
